fixed news summary overflow

--- a/group_flask_starter/client/src/index.css
+++ b/group_flask_starter/client/src/index.css
@@ -561,7 +561,7 @@ body {
   grid-template-rows: 15% 40% 45%;
   border-top: 1px solid rgb(190, 176, 176);
   max-width: 600px;
-  max-height: 250px;
+  max-height: 270px;
   padding-top: 10px;
 }
 #news-feed{
@@ -581,6 +581,7 @@ body {
 #news-summary{
   font-size: 13px;
   grid-area: 3/1/3/1;
+  overflow: hidden;
 }
 #news-image{
   height: 150px;
